# P4sec

./: Makefile  README.md  Vagrantfile  client.py  global.py  local.py  setup-tmux.bash  setup.bash  setup.py  wan.py
client_lib/: __init__.py  client.py  dns_interceptor.py  settings.py
client_lib/global_/: __init__.py  controller.py  macsec.py  registration.py
client_lib/manager/: __init__.py  authenticator.py  ipsec.py  macsec.py  tunnel.py
common_lib/event/: task.py  (+2 more)
dependencies/: freeradius-clients.txt  freeradius-users.txt  root-bootstrap.sh  user-bootstrap.sh
docs/: architecture-short-description.md  architecture.md  radius.md  useful-resources.md
example/: dnsmasq.conf  extern-client-config.json  g1-config.json  g2-config.json  intern-client-config-2.json  intern-client-config.json  p4_mininet.py  p4runtime_switch.py  run.py  s1-config.json  s2-config.json  s3-config.json  setup.bash  simulate.py  simulation-topology.json  topology.json  util.py  wan-config.json  wpa_supplicant.conf
externs/: CMakeLists.txt  p4ipsec.cpp  p4ipsec.hpp  p4macsec.cpp  p4macsec.hpp
global_lib/: __init__.py  commands.py  controller.py  settings.py
local_lib/: __init__.py  commands.py  controller.py  global_stub.py  settings.py
p4/: checksum.p4  constants.p4  deparser.p4  egress.p4  headers.p4  ingress.p4  parser.p4  port-authorizer.p4  switch.p4
protos/: command.proto  controller.proto  credentials.proto  general.proto  ipsec.proto  macsec.proto  nothing.proto  routing.proto  text.proto  topology.proto
wan_lib/: __init__.py  commands.py  controller.py  settings.py
(+145 files in other folders)
